[package]
name = "two_step_nuc"
version = "0.1.0"
edition = "2021"

[lib]
name = "two_step_nuc"
crate-type = ["cdylib"]

[features]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }
numpy = { version = "0.19", optional = true }
ndarray = "0.15"
rand = "0.8"
statrs = "0.16"  # For statistics functions
ndarray-stats = "0.5"
rayon = "1.7"    # For parallel processing
image = "0.24"   # For image filtering operations
