[package]
name = "stochastic_greedy_model"
authors = ["Constantine Evans <constantine@costi.net>"]
description = "An implementation of the stochastic greedy model of nucleation, and related models"
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2021"

[lib]
name = "stochastic_greedy_model"
crate-type = ["cdylib", "rlib"]

[features]
python = ["dep:pyo3", "dep:numpy"]
default = ["python"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }
ndarray = "0.16"
rand = "0.8"
approx = "0.5.1"
ndarray-stats = "0.6.0"
itertools = "0.14.0"
logaddexp = "0.1.3"
num-traits = "0.2.19"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "counting"
harness = false

[profile.release]
lto = true
codegen-units = 1
